# linkedln-parser

./: LICENSE  README.md  globals.py  main.py  pyproject.toml
linkedln_parser/: linkedln.py
src/: __init__.py  app.py
src/linkedln_parser/: __init__.py  linkedin.py  linkedln.py
src/menu_app/: __init__.py  keymode.py  menu.py
src/menu_app/elements/: __init__.py  element.py  option.py  slider.py
